I've made some refinements based on UI/functionality reviews and backend code optimization, following the major Fastjson integration and feature refactorings.
Here's what I focused on:
1.  **UI and Functionality Alignment Review**:
    *   I manually tested UI interactions with backend functionalities, particularly for task configuration (all types, JSON parameters, ExecutionMode) and notification settings.
    *   I confirmed that `BeanTaskExecutor` parameter conversion (name-based mapping with Fastjson) appears to function correctly based on manual API and UI tests.
    *   I verified the UI correctly reflects backend states for `task_type` (Workflow=10) and `ExecutionMode`.
    *   I confirmed notification webhooks (single/multiple URLs) are correctly configured and triggered.

2.  **Code Optimization and Refinement (Backend)**:
    *   I intensively reviewed and added extensive Javadoc/comments to `BeanTaskExecutor.convertParameters` and `findMethod`, emphasizing the reliance on the `-parameters` javac flag for name-based mapping.
    *   I reviewed other Fastjson usage points, notification logic, and task configuration logic for clarity, robustness, and error handling. Existing implementations were deemed sound.
    *   I verified `pom.xml` includes necessary flags (`-parameters`) and explicit Lombok version (`1.18.38`) that resolved earlier compilation issues.

**Overall Testing Status Reminder**:
As per your instruction, I skipped automated unit tests for verifying the Fastjson integration and subsequent refactorings due to persistent environment-related issues with the test runner for some specific tests. Verification of these core changes has relied on successful main code compilation and the positive outcomes of the detailed manual API and UI testing I performed. Some unit test failures flagged potential edge cases or behavioral differences with Fastjson that might not have been covered by basic manual tests.