@@ -6,7 +6,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
 import java.util.List;
 
 @RestController
@@ -32,7 +31,7 @@ public class TaskExecuteLogController {
         int endIndex = Math.min(startIndex + size, totalLogs);
 
         if (startIndex >= totalLogs) {
-            return ResponseEntity.ok(Collections.emptyList()); // Empty list if page is out of bounds
+            return ResponseEntity.ok(List.of()); // Empty list if page is out of bounds
         }
 
         List<TaskExecuteLog> paginatedLogs = allLogs.subList(startIndex, endIndex);
@@ -53,7 +52,7 @@ public class TaskExecuteLogController {
         int endIndex = Math.min(startIndex + size, totalLogs);
 
         if (startIndex >= totalLogs) {
-            return ResponseEntity.ok(Collections.emptyList());
+            return ResponseEntity.ok(List.of());
         }
 
         List<TaskExecuteLog> paginatedLogs = taskLogs.subList(startIndex, endIndex);
